--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ attrs==19.3.0
 black==19.10b0
 click==7.1.2
 flake8==3.8.3
+grpcio==1.30.0
+grpcio-tools==1.30.0
 importlib-metadata==1.7.0
 mccabe==0.6.1
 more-itertools==8.4.0
 packaging==20.4
 pathspec==0.8.0
 pluggy==0.13.1
+protobuf==3.12.2
 py==1.9.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
