--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,17 @@ version: '3.3'
 services:
   db:
     build: .
+      context:
+      dockerfile: toygraphdb.Dockerfile
     ports:
-      - "8080:8080"
+      - "9090:9090"
     volumes:
       - .:/code
-  envoy:
+  proxy:
     build:
+      context: .
+      dockerfile: envoy.Dockerfile
+    depends_on:
+      - server
     ports:
-      - "8080:8081"
+      - "8080:8080"
