--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,12 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - .:/code
-  proxy:
-    build:
-      context: .
-      dockerfile: envoy.Dockerfile
-    depends_on:
-      - db
-    ports:
-      - "8080:8080"
+      - .:/toygraphdb
+#  proxy:
+#    build:
+#      context: .
+#      dockerfile: envoy.Dockerfile
+#    depends_on:
+#      - db
+#    ports:
+#      - "8080:8080"
