--- a/envoy.yaml
+++ b/envoy.yaml
@@ -37,7 +37,7 @@ static_resources:
           - name: envoy.filters.http.cors
           - name: envoy.filters.http.router
   clusters:
-  - name: query_service
+  - name:query_service
     connect_timeout: 0.25s
     type: logical_dns
     http2_protocol_options: {}
@@ -50,5 +50,5 @@ static_resources:
             - endpoint:
                 address:
                   socket_address:
-                    address: host.docker.internal
+                    address: 0.0.0.0
                     port_value: 9090
