--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,9 @@
+2to3==1.0
 appdirs==1.4.4
 attrs==19.3.0
 black==19.10b0
 click==7.1.2
+emoji==0.5.4
 flake8==3.8.3
 grpcio==1.30.0
 grpcio-tools==1.30.0
