--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,18 @@
 version: '3.3'
 services:
   db:
-    build: .
+    build:
+      context: .
+      dockerfile: toygraphdb.Dockerfile
     ports:
-      - "8080:8080"
+      - "9090:9090"
     volumes:
-      - .:/code
+      - .:/toygraphdb
+#  proxy:
+#    build:
+#      context: .
+#      dockerfile: envoy.Dockerfile
+#    depends_on:
+#      - db
+#    ports:
+#      - "8080:8080"
